# cortex

./: .codex-review.toml  .gitignore  .pre-commit-config.yaml  .touchstone-config  .touchstone-manifest  .touchstone-review.toml  AGENTS.md  CLAUDE.md  GEMINI.md  PLAN.md  README.md  SPEC.md  TOUCHSTONE.md  pyproject.toml  railway.toml  vision-draft-v2.md  vision-draft-v3.md  vision-draft.md
.cortex/: .gitignore  .index.json  config.toml  map.md  protocol.md  state.md
.cortex/doctrine/: 0001-why-cortex-exists.md  0002-compose-by-file-contract-not-code.md  0003-spec-is-the-artifact.md  0004-scope-boundaries.md  0005-scope-boundaries-v2.md  0006-scope-boundaries-v3.md  0007-canonical-ownership-of-state-and-plans.md  0008-context-integrity-build-system.md  candidate-manifest-semantic-topup.md  candidate-pr-merged-staging.md  candidate.md
.cortex/journal/: 2026-04-17-competitive-positioning-and-claude-code-risk.md  2026-04-17-cortex-init-shipped.md  2026-04-17-cursor-retreat-and-scale-design.md  2026-04-17-journal-append-only-self-test.md  2026-04-17-phase-a-foundation-shipped.md  2026-04-17-phase-b-plan-refresh.md  2026-04-17-phase-b-scaffold-shipped.md  2026-04-17-protocol-sharpened-and-drafts-archived.md  2026-04-17-spec-v0.1.0-drafted.md  2026-04-17-vision-critique-round-1.md  2026-04-17-vision-session-lost-to-crash.md  2026-04-17-vision-v3-promoted.md  2026-04-18-journal-append-only-self-test.md  2026-04-18-open-phase-c-plan-and-update-build-docs.md  2026-04-18-phase-b-plan-refresh.md  2026-04-18-phase-b-shipped-v0.1.0-on-homebrew.md  2026-04-23-derive-success-from-preconditions.md  2026-04-23-phase-c-reordered.md  2026-04-24-case-study-driven-roadmap.md  2026-04-24-dogfood-target-touchstone.md  2026-04-24-init-ux-fixes-plan-decision.md  2026-04-24-plan-md-deleted-as-redundant.md  2026-04-24-production-release-rerank.md  2026-04-24-single-plan-consolidation.md  2026-04-24-v1-followups-parked.md  2026-04-25-init-ux-fixes-plan-shipped.md  2026-04-25-readme-drift-detection-feature-request.md  2026-04-25-v0.2.4-and-v0.2.5-released.md  2026-04-25-v0.2.4-touchstone-re-test-clean.md  2026-04-25-v0.3.0-released.md  2026-04-26-v0.3.0-released.md  2026-04-27-production-readiness-audit-hardening.md  2026-04-27-refresh-state-hand-marker-convention.md  2026-04-28-codesight-cross-pollination-and-council-review.md  2026-04-28-cortex-v050-released-tier-2-tier-3-partial-tier-4.md  2026-04-28-cortex-v051-autumn-mail-dogfood-polish-patch.md  2026-04-28-deps-rust-council-review.md  2026-04-28-markdownfs-council-review.md  2026-05-02-canonical-ownership-doctrine-and-doctor-check.md  2026-05-02-promote-retrieval-onto-launch-path-and-doc-cleanup.md  (+118 more)
.cortex/plans/: context-integrity-production.md  cortex-retrieve.md  cortex-v0.3.0.md  cortex-v1.md  hosted-decision-reviewer.md  init-ux-fixes-from-touchstone.md  phase-b-walking-skeleton.md  phase-c-authoring-and-state.md  phase-c-first-synthesis.md  phase-d-integration.md  phase-e-synthesis-and-governance.md  vision-sharpening.md
.cortex/templates/: README.md
.cursor/rules/: conductor-delegation.mdc
.github/workflows/: ci.yml  eval-gate.yml  issue-claim-check.yml  release.yml
briefs/: issue-60-grep-frontmatter-filter.md  issue-61-init-seed-from.md  v0.4.0-T1-refresh-state.md  v0.4.0-T2-plan-status.md  v0.4.0-T3-cortex-next.md  v0.5.0-T1-audit-instructions.md  v0.5.0-T2-touchstone-post-merge-hook.md  v0.5.0-T3-verified-per-fact.md  v0.5.1-cortex-next-placeholder-filter.md  v0.5.1-polish-grep-version-ecosystem.md  v0.5.1-staleness-sweep.md  v0.6.0-T1-index-writer.md  v0.6.0-T2-promote-real-writer.md  v0.6.0-T3-doctor-invariants.md  v0.7.0-S1-retrieve-bm25.md  v0.7.0-S2-retrieve-semantic-hybrid.md  v0.9.0-touchstone-post-merge-hook.md  v1.0-config-toml-schema-reference.md  v1.0-spec-to-test-traceability-matrix.md
demo/: siblings_bridge_example.py
docs/: CASE-STUDIES.md  HOSTED-PRICING.md  PITCH.md  PRIOR_ART.md  config-reference.md  degradation-modes.md  demo-script.md  facts-file-schema.md  fleet.md  grep.md  hosted-architecture.md  hosted-deploy.md  hosted-ledger.md  install-pr-templates.md  retrieve.md  security.md  spec-conformance.md  walkthrough-pe0.md
docs/case-studies/: 2026-04-24-stale-claude-md-steered-agent-wrong.md
docs/eval/: grading-sheet-2026-06-10.md  replay-450-2026-06-10.json  replay-450-v2-2026-06-10.json
drafts/: vision-draft-v2.md  vision-draft-v3.md  vision-draft.md
fixtures/: valid-pr-merged.json
lib/: events.sh  preflight-scope.sh  preflight.sh  review-comment.sh  script-sync-guard.sh  toml.sh  worker-state.sh
principles/: agent-swarms.md  ai-delivery-architecture.md  engineering-principles.md  file-upstream-bugs.md  git-workflow.md
scripts/: claim-issue.sh  cleanup-branches.sh  cleanup-worktrees.sh  codex-review.sh  conductor-review.sh  cortex-journal-wire.sh  cortex-pr-merged-hook.sh  dispatch-task.sh  emergency-disclosure.sh  issue-claim-check.sh  merge-pr.sh  open-pr.sh  release.sh  run-pytest-in-venv.sh  spawn-worktree.sh  touchstone-run.sh  worker.sh
src/cortex/: cli.py  (+34 more)
tests/: test_audit.py  test_audit_instructions.py  test_audit_issue_refs.py  test_banner.py  test_bare_repo_degradation.py  test_check_triggers.py  test_commands_ask.py  test_commands_confirm.py  test_commands_derive.py  test_commands_push.py  test_commands_review.py  test_commands_triage.py  test_config_reference.py  test_cortex_journal_wire.py  test_data_sync.py  test_doctor.py  test_doctor_invariants.py  test_doctor_orphan_deferrals.py  test_doctor_pr_trailers.py  test_doctor_siblings.py  test_doctor_spec_pin.py  test_fleet.py  test_fresh_clone_acceptance.py  test_frontmatter.py  test_goal_hash.py  test_grep.py  test_hosted_advisory_ladder.py  test_hosted_api.py  test_hosted_api_integration.py  test_hosted_api_transport.py  test_hosted_ask_ledger.py  test_hosted_ask_surface.py  test_hosted_banking_cascade_quality.py  test_hosted_candidate_dedup.py  test_hosted_candidate_metrics.py  test_hosted_citation_check.py  test_hosted_confidence.py  test_hosted_content_match.py  test_hosted_context_assembly.py  test_hosted_corpus_builder.py  (+93 more)
(+177 files in other folders)
