[project]
name = "cortex"
version = "0.6.0"
description = "A file-format protocol for per-project memory, and the reference CLI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "autumngarage" },
]
keywords = ["memory", "protocol", "agents", "doctrine", "journal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "click>=8.1,<9",
]

[project.scripts]
cortex = "cortex.cli:cli"

[project.urls]
Homepage = "https://github.com/autumngarage/cortex"
Repository = "https://github.com/autumngarage/cortex"
Documentation = "https://github.com/autumngarage/cortex/blob/main/SPEC.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.11",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# Pin the dependency-resolution cutoff to a fixed date so `uv lock` /
# `uv sync` produce a byte-identical uv.lock across machines and days.
# Without this, the system-level UV_EXCLUDE_NEWER policy (a rolling
# 7-day window) bakes a fresh "now - 7 days" timestamp into uv.lock's
# [options] block on every invocation, churning a 4-line diff with no
# actual dependency change. Bump this date deliberately when you want
# to refresh deps — it becomes a single intentional "refresh deps" PR
# instead of accidental noise on unrelated branches.
exclude-newer = "2026-04-25T00:00:00Z"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.hatch.build.targets.wheel.force-include]
"src/cortex/_data" = "cortex/_data"

[tool.hatch.build.targets.sdist]
include = [
    "src/cortex",
    "README.md",
    "SPEC.md",
    "LICENSE",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RET", "SIM", "TID", "ARG", "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
